--- a/css/main.css
+++ b/css/main.css
@@ -597,6 +597,7 @@ img {
 }
 @media screen and (min-width: 768px) {
   .hero {
+    max-width: 768px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main/tablet/tab-hero-1x.jpg);
   }
 }
@@ -617,7 +618,6 @@ img {
 }
 
 .hero__title {
-  max-width: 700px;
   margin: 0 auto 30px auto;
   font-weight: 900;
   font-size: 26px;
@@ -626,6 +626,11 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    width: 360px;
+  }
 }
 
 .hero__btn {
