--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -18,6 +18,7 @@
     background-image: $bg-hero-gradient, url(../images/main/mob/mob-hero-2x.jpg);
 }
     @include tablet {
+        max-width: 768px;
         background-image: $bg-hero-gradient, url(../images/main/tablet/tab-hero-1x.jpg);
             @include double-pixel {
                 background-image: $bg-hero-gradient, url(../images/main/tablet/tab-hero-2x.jpg);
@@ -33,7 +34,6 @@
 }
 
 .hero__title {
-    max-width: 700px;
     margin: 0 auto 30px auto;
 
     font-weight: 900;
@@ -43,6 +43,10 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $footer-color-text-secondary;
+
+    @include tablet {
+        width: 360px;
+    }
 }
 
 .hero__btn {
