--- a/css/main.css
+++ b/css/main.css
@@ -1352,11 +1352,13 @@ img {
 
 .gallery-card__overlay {
   position: absolute;
-  display: block;
+  display: flex;
+  align-items: center;
   width: 100%;
+  height: 100%;
   left: 0;
-  padding: 77px 24px;
-  font-size: 18px;
+  padding: 24px;
+  font-size: calc((100vw - 320px) / 160 * 2 + 16px);
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #ffffff;
