--- a/sass/components/portfolio/_cards.scss
+++ b/sass/components/portfolio/_cards.scss
@@ -5,12 +5,14 @@
 
 .gallery-card__overlay {
     position: absolute;
-    display: block;
+    display: flex;
+    align-items: center;
     width: 100%;
+    height: 100%;
     left: 0;
-    padding: 77px 24px;
+    padding: 24px;
 
-    font-size: 18px;
+  font-size: calc( (100vw - 320px)/(480 - 320) * (18 - 16) + 16px);
     line-height: 1.56;
     letter-spacing: 0.03em;
 
