--- a/css/main.css
+++ b/css/main.css
@@ -1392,6 +1392,11 @@ img {
   background-color: rgba(33, 150, 243, 0.9);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .gallery-card__overlay {
+    font-size: 18px;
+  }
+}
 
 .gallery-card__name {
   display: flex;
