--- a/sass/components/portfolio/_cards.scss
+++ b/sass/components/portfolio/_cards.scss
@@ -20,6 +20,10 @@
     background-color: rgba(33, 150, 243, 0.9);
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @include tablet {
+        font-size: 18px;
+    }
 }
 
 .gallery-card__name {
