--- a/css/main.css
+++ b/css/main.css
@@ -1007,6 +1007,7 @@ img {
 
 .about__title {
   margin-bottom: 10px;
+  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -1072,21 +1073,16 @@ img {
 }
 
 .team__title {
-  padding-top: 94px;
+  padding-top: 60px;
   margin-bottom: 30px;
   font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
-@media screen and (min-width: 768px) {
-  .team__title {
-    margin-top: 60px;
-  }
-}
 @media screen and (min-width: 1170px) {
   .team__title {
-    margin-top: 0;
+    padding-top: 94px;
     margin-bottom: 50px;
     font-size: 36px;
   }
