--- a/sass/components/main-page/_features.scss
+++ b/sass/components/main-page/_features.scss
@@ -48,6 +48,7 @@
 .about__title {
     margin-bottom: 10px;
 
+    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
